--- a/adquat_advanced/views/crm_view.xml
+++ b/adquat_advanced/views/crm_view.xml
@@ -2,6 +2,7 @@
 <odoo>
     <data>
         <!-- NO UPDATE POSSIBLE -->
+        <!--CRM -->
         <record id="crm_lead_form_personnalisation_view" model="ir.ui.view">
             <field name="name">crm.lead.form.personnalisation</field>
             <field name="model">crm.lead</field>
@@ -1089,6 +1090,8 @@
                 <xpath expr="//tree/field[@name='team_id']" position="after">
                     <field name="x_sale_specialist" optional="show"/>
                 </xpath>
+                <!-- NEW -->
+                <xpath expr="//button[@name='%(crm.action_lead_mail_compose)d']" position="replace"/>
             </field>
         </record>
         <record id="crm_lead_activity_personnalisation_view" model="ir.ui.view">
@@ -1104,5 +1107,21 @@
             </field>
         </record>
 
+        <!--CONTACT -->
+        <record id="contacts.action_contacts" model="ir.actions.act_window">
+            <field name="name">Contacts</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">res.partner</field>
+            <field name="view_mode">kanban,form,activity</field>
+            <field name="search_view_id" ref="base.view_res_partner_filter"/>
+            <field name="context">{'default_is_company': True , 'search_default_assigned_to_me': True, 'search_default_type_company': True}</field>
+            <field name="help" type="html">
+              <p class="o_view_nocontent_smiling_face">
+                Create a Contact in your address book
+              </p><p>
+                Odoo helps you track all activities related to your contacts.
+              </p>
+            </field>
+        </record>
     </data>
 </odoo>
