--- a/adquat_advanced/views/user_view.xml
+++ b/adquat_advanced/views/user_view.xml
@@ -16,5 +16,15 @@
                 </xpath>
             </field>
         </record>
+        <!-- SUPPRESSION MENUS MESSAGES/CALENDRIER -->
+        <record id="group_show_msg_calendar" model="res.groups">
+            <field name="name">EXAPROBE / Voir Messages - Calendrier</field>
+        </record>
+        <record id="mail.menu_root_discuss" model="ir.ui.menu">
+            <field name="groups_id" eval="[(6, 0, [ref('group_show_msg_calendar')])]"/>
+        </record>
+        <record id="calendar.mail_menu_calendar" model="ir.ui.menu">
+            <field name="groups_id" eval="[(6, 0, [ref('group_show_msg_calendar')])]"/>
+        </record>
     </data>
 </odoo>
